--- a/catalog.html
+++ b/catalog.html
@@ -20,7 +20,7 @@
       <nav class="header-navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html">Каталог</a>
+            <a class="navigation-link current" href="#">Каталог</a>
             <div class="catalog-popup">
               <span class="catalog-popup-title">Новинки</span>
               <ul class="catalog-popup-list">
